--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 </head>
 
 <body>
-    <h1>Tecsup I Aprende Desarrollo Web Gratis con los Mejores</h1>
+    <header>
+        <nav>
+            <a href="#">
+                <img src="https://i.postimg.cc/CLvBLFZM/tecsup-logo1.png " alt="tecsup-logo1" height="32">
+            </a>
+            <ul>   
+            <li>
+            <a href="#">Teams</a>
+            </li>
+            <li>
+            <a href="https://www.instagram.com/earc96/" target="_blank" rel="noopener noreferrer">Alexis</a>
+            </li>
+            </ul>
+            <ul>
+            <li>
+            <a href="https://www.instagram.com/earc96" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+            </li>
+            <li>
+            <a href="https://web.facebook.com/Aleexiss08" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+            </li>
+            <li>
+            <a href="https://github.com/earc96" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></i></a>
+            </li>
+            <li>
+            <a href="https://twitter.com/EARC96" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></i></a>
+            </li>
+            </ul>
+          </nav> 
+    </header>
 </body>
 
 </html>
