--- a/index.html
+++ b/index.html
@@ -37,8 +37,40 @@
             <a href="https://twitter.com/EARC96" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></i></a>
             </li>
             </ul>
-          </nav> 
+        </nav> 
     </header>
+    <main>
+        <article>
+            <div>
+                <div>
+                    <h1>Desarrollo Web I Tecsup I Codigo</h1>
+                    <h2>Aprende sobre Desarrollo web Gratis con los mejores</h2>
+                    <p>El mejor centro educativo de Perú y Latinoamérica. Tecsup, donde puedes aprender sobre Desarrollo Web gratis. Impulsa tu futuro con Nosotros </p>
+                    <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Contacto</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Whatsapp</a>
+                    </div>
+                    <div>
+                        <img src="https://i.postimg.cc/Nfqjf3M2/IMG.jpg" alt="IMG-ALEX" height="256" >
+                        <ul>
+                        <li>
+                        <img src="https://www.svgrepo.com/show/452228/html-5.svg" alt="html" width="64" height="64">
+                        </li>
+                        <li>
+                        <img src="https://www.svgrepo.com/show/452185/css-3.svg" alt="css" width="64" height="64">
+                        </li>
+                        <li>
+                        <img src="https://www.svgrepo.com/show/373705/js-official.svg" alt="js" width="64" height="64">
+                        </li>
+                        <li>
+                        <img src="https://www.svgrepo.com/show/493719/react-javascript-js-framework-facebook.svg" alt="React" width="64" height="64">
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </main>
 </body>
 
 </html>
