feat: homepage teams

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
             <ul>   
             <li>
-            <a href="#">Teams</a>
+            <a href="#teams">Teams</a>
             </li>
             <li>
             <a href="https://www.instagram.com/earc96/" target="_blank" rel="noopener noreferrer">Alexis</a>
@@ -70,6 +70,11 @@
                 </div>
             </div>
         </article>
+        <section id="teams">
+            <div>
+                <h2>Teams</h2>
+            </div>
+        </section>
     </main>
 </body>
 
