--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 </div>
             </div>
         </article>
+        <section id="teams">
+            <div>
+                <h2>Teams</h2>
+            </div>
+        </section>
     </main>
 </body>
 
