--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a href="#">
+            <a href="./">
                 <img src="https://i.postimg.cc/CLvBLFZM/tecsup-logo1.png " alt="tecsup-logo1" height="32">
             </a>
             <ul>   
@@ -72,7 +72,12 @@
         </article>
         <section id="teams">
             <div>
-                <h2>Teams</h2>
+                <h2><a href="./teams/index.html">Teams</a></h2>
+                <ul>
+                    <li>
+                        <a href="./teams/g23/index.html">G23</a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
